--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -1,9 +1,13 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>about</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref='/home'></ion-back-button>
+    </ion-buttons>
+    <ion-title>About My Timesheet</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <p>diego.nahuel.campos@gmail.com</p>
 
 </ion-content>
