--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,3 +1,7 @@
+ion-content.background{
+  --background: url(../../../assets/background.jpg) 0 0/100% 100% no-repeat;
+}
+
 .fromToDates {
     display: flex;
   flex-direction: row;
