--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -34,7 +34,7 @@
     <strong id="total">Total weekly hours: {{weekInfo.totalHours |  number : '1.2-2'}}</strong>
   </div>
   <div class="totalHours">
-    <strong id="total">Weekly production: {{weekInfo.totalProd}}</strong>
+    <strong id="total">Weekly production: {{weekInfo.totalProd |  number : '1.2-2'}}</strong>
   </div>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" #fab>
@@ -71,7 +71,7 @@
 
             <ion-item *ngIf="time.byProd">
               <ion-label>Quantity</ion-label>
-              <ion-label>{{time.quantity}}</ion-label>
+              <ion-label>{{time.quantity |  number : '1.2-2'}}</ion-label>
             </ion-item>
 
             <ion-item id="listTimes" *ngIf="!time.byProd">
