Improvments in home screen, starting with search

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -7,7 +7,18 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <p>diego.nahuel.campos@gmail.com</p>
+<ion-content class="background">
+  <p>
+  <div id="info">
+    <b><a href="https://diegocampos.me/">diegocampos.me</a></b><br><br>
+    <!-- <a href="mailto:diego.nahuel.campos@gmail.com">diego.nahuel.campos@gmail.com</a><br><br> -->
+    Tauranga<br>
+    New Zealand
+  </div>
+  <p>
+  <div class="LI-profile-badge linkedin" data-version="v1" data-size="medium" data-locale="es_ES" data-type="vertical"
+    data-theme="dark" data-vanity="diegonahuelcampos"><a class="LI-simple-link"
+      href='https://nz.linkedin.com/in/diegonahuelcampos?trk=profile-badge'>Linkedin</a></div>
+
 
 </ion-content>
