Pwa auto update and version in about

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -20,5 +20,8 @@
     data-theme="dark" data-vanity="diegonahuelcampos"><a class="LI-simple-link"
       href='https://nz.linkedin.com/in/diegonahuelcampos?trk=profile-badge'>Linkedin</a></div>
 
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" #fab>
+    <ion-label>Version 1.003</ion-label>
+  </ion-fab>
 
 </ion-content>
