--- a/src/app/pages/registration/registration.page.html
+++ b/src/app/pages/registration/registration.page.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button> </ion-back-button>
     </ion-buttons>
     <ion-title>Register User</ion-title>
   </ion-toolbar>
@@ -11,17 +11,25 @@
   <form>    
     <ion-item lines="full">
       <ion-label position="floating">Email</ion-label>
-      <ion-input type="text" #email required></ion-input>
+      <ion-input type="text" [(ngModel)]="login.email" name="email"></ion-input>
     </ion-item> 
 
     <ion-item lines="full">
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" #password required></ion-input>
+      <ion-input type="password" [(ngModel)]="login.password" name="password"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">
+        Confirm Password
+        <span *ngIf="confPass" class="required">&#42;</span>
+      </ion-label>
+      <ion-input type="password" [(ngModel)]="login.confPassword" name="confPassword"></ion-input>
     </ion-item>
 
     <ion-row>
       <ion-col> 
-      <ion-button type="submit" (click)="signUp(email, password)" expand="block">Register</ion-button>
+      <ion-button type="submit" (click)="signUp()" expand="block" [disabled]="login.email == '' || login.password == '' || login.confPassword == '' ">Register</ion-button>
       </ion-col>
     </ion-row>
   </form>
