New color bariable 'BG', some changes in guard

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -65,7 +65,7 @@
       <ion-card-content>
         <ion-list>
           <div *ngFor="let time of currentWeek; let $index=index;">
-            <ion-item id="listDate" color="light">
+            <ion-item id="listDate" color="bg">
               <ion-label>{{time.date | date: 'EE dd MMM yyyy'}}</ion-label>
             </ion-item>
 
