--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -52,6 +52,11 @@ ion-content.background{
     text-align: center;
     display: block;
   }
+  #hadLunch {
+    display: block;
+    text-align: center;
+    font-size: smaller;
+  }
 }
 .homeSpinner {
   transform: scale(2);
