--- a/src/app/pages/new-time/new-time.page.html
+++ b/src/app/pages/new-time/new-time.page.html
@@ -39,6 +39,20 @@
     <ion-input type="number" #byProd [(ngModel)]="newDate.quantity"></ion-input>
   </ion-item>
 
+  <ion-item [hidden]="newDate.byProd">
+    <ion-checkbox color="primary" [(ngModel)]="newDate.hadLunch"></ion-checkbox>
+    <ion-label class="byProdLabel">Lunch Time</ion-label>  
+  </ion-item>
+  <ion-item [hidden]="!newDate.hadLunch || newDate.byProd">
+    <ion-label position="floating">Lunch Time (minutes)</ion-label>
+    <ion-input type="number" [(ngModel)]="newDate.lunchTime"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">Comments</ion-label>
+    <ion-input [(ngModel)]="newDate.comments"></ion-input>
+  </ion-item>
+
   <ion-button expand="block" color="primary" (click)="addTime()">Add Time</ion-button>
 
 </ion-content>
