Edit and delete options, comments show on click

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -29,7 +29,7 @@ ion-content.background{
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
-  width: 100%;
+  // width: 100%;
   
   ion-icon {
     flex-grow: 1;
