--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -19,7 +19,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="background">
+<ion-content [fullscreen]="true" class="background" scrollEvents="true">
 
   <div class="fromToDates">
     <div class="col">
@@ -64,7 +64,7 @@
 
       <ion-card-content>
         <ion-list lines="none">
-          <div *ngFor="let time of currentWeek; let $index=index;" (click)="showDetailsF(time)">
+          <div *ngFor="let time of currentWeek; let $index=index;" (click)="showDetailsF(time)" (press)="onPress(time)">
             <ion-item id="listDate" color="bg">
               <ion-label>{{time.date | date: 'EE dd MMM yyyy'}}</ion-label>
             </ion-item>
