About linkedin fixed

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -10,18 +10,23 @@
 <ion-content class="background">
   <p>
   <div id="info">
-    <b><a href="https://diegocampos.me/">diegocampos.me</a></b><br><br>
-    <!-- <a href="mailto:diego.nahuel.campos@gmail.com">diego.nahuel.campos@gmail.com</a><br><br> -->
+    <div class="animate__animated animate__rubberBand animate__delay-2s animate__infinite animate__slower">
+      <b><a href="https://diegocampos.me/">diegocampos.me</a></b>
+    </div><br><br>
+    <a href="mailto:diego.nahuel.campos@gmail.com">diego.nahuel.campos@gmail.com</a><br><br>
     Tauranga<br>
     New Zealand
   </div>
   <p>
-  <div class="LI-profile-badge linkedin" data-version="v1" data-size="medium" data-locale="es_ES" data-type="vertical"
+  <!-- <div class="LI-profile-badge linkedin" data-version="v1" data-size="medium" data-locale="es_ES" data-type="vertical"
     data-theme="dark" data-vanity="diegonahuelcampos"><a class="LI-simple-link"
-      href='https://nz.linkedin.com/in/diegonahuelcampos?trk=profile-badge'>Linkedin</a></div>
+      href='https://nz.linkedin.com/in/diegonahuelcampos?trk=profile-badge'>Linkedin</a></div> -->
+  <a href="https://nz.linkedin.com/in/diegonahuelcampos">
+    <div class="linkedin"></div>
+  </a>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" #fab>
-    <ion-label>Version 1.010_4</ion-label>
+    <ion-label>Version 1.010_6</ion-label>
   </ion-fab>
 
 </ion-content>
