Whatsapp shared option, share styled text with weekly summary

--- a/src/app/pages/share/share.page.html
+++ b/src/app/pages/share/share.page.html
@@ -53,7 +53,7 @@
 
   <ion-button expand="block" color="primary" (click)="savePdf()">Save as PDF</ion-button>
   <ion-button expand="block" color="primary" (click)="saveImage()">Save as Image</ion-button>
-  <ion-button expand="block" color="primary" (click)="send()">Send by Whatsapp</ion-button>
+  <ion-button expand="block" color="primary" (click)="webshare()">Send by Whatsapp</ion-button>
 
 
 
