Implement settings page and earned money option

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -30,11 +30,11 @@
         <strong id="to">To: {{weekInfo.to | date: 'dd/MM/yyyy'}}</strong>
       </div>
     </div>
-    <div class="totalHours">
-      <strong id="total">Total hours: {{weekInfo.totalHours |  number : '1.2-2'}}</strong>
+    <div class="totalHours" *ngIf="weekInfo.totalHours !== 0">
+      <strong id="total">Total hours: {{weekInfo.totalHours |  number : '1.2-2'}}</strong> <span [innerHTML]="showTotalsRate('hourlyRate')"></span>
     </div>
-    <div class="totalHours">
-      <strong id="total">Total production: {{weekInfo.totalProd |  number : '1.2-2'}}</strong>
+    <div class="totalHours"*ngIf="weekInfo.totalProd !== 0">
+      <strong id="total">Total production: {{weekInfo.totalProd |  number : '1.2-2'}}</strong> <span [innerHTML]="showTotalsRate('prodRate')"></span>
     </div>
   </div>
 
