Show Password and confirmation on register page

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -26,7 +26,7 @@
   </a>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" #fab>
-    <ion-label>Version 1.010_15</ion-label>
+    <ion-label>Version 1.011</ion-label>
   </ion-fab>
 
 </ion-content>
