--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -6,7 +6,7 @@
     <ion-title *ngIf="!searchMode">{{userInfo.displayName}}'s Timesheet</ion-title>
     <ion-title *ngIf="searchMode">Search Result</ion-title>
 
-    <ion-buttons slot="end" (click)="presentAlertSearch()" *ngIf="!searchMode">
+    <ion-buttons slot="end" (click)="search()" *ngIf="!searchMode">
       <ion-button>
         <ion-icon slot="icon-only" name="search"></ion-icon>
       </ion-button>
