--- a/src/app/pages/new-time/new-time.page.scss
+++ b/src/app/pages/new-time/new-time.page.scss
@@ -1,3 +1,8 @@
+ion-content.background{
+    --background: url(../../../assets/background.jpg) 0 0/100% 100% no-repeat;
+    --ion-background-color: transparent !important;
+}
+
 .byProdLabel {
     padding-left: 10px;
 }
