--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,8 +4,18 @@
   </ion-toolbar> -->
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="login">
+  
   <ion-img class="icon" src="assets/icons/icon-256x256.png"></ion-img>
+  <div class="appDescription">
+    <ion-card>
+      <ion-label>
+        <b>My Timesheet</b> is perfect for self-employed, freelancers, contractors, hourly workers and employees to use 
+        as time card, know your working hours, automatically calculate earnings, submit time sheet to managers. 
+        Start using the app for free creating a new user or logging in.
+      </ion-label>
+    </ion-card>
+  </div>
   <div class="credentials">
     <ion-item>
       <ion-label position="floating">
