Register page style improvments

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -28,7 +28,7 @@
         Password
       </ion-label>
       <ion-input #input type="password" [(ngModel)]="user.password"></ion-input>
-      <ion-icon [name]="showIcon" color="primary" slot="end" (click)="showPassword(input)"></ion-icon>
+      <ion-icon [name]="showIcon" color="dark" slot="end" (click)="showPassword(input)"></ion-icon>
     </ion-item>
   </div>
   <div class="buttons">
