--- a/src/app/pages/registration/registration.page.html
+++ b/src/app/pages/registration/registration.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="registration">
   <form>
     <ion-item lines="full">
       <ion-label position="floating">Name</ion-label>
@@ -22,7 +22,7 @@
     <ion-item lines="full">
       <ion-label position="floating">Password</ion-label>
       <ion-input #inputPass type="password" [(ngModel)]="login.password" name="password"></ion-input>
-      <ion-icon [name]="showIconPass" color="primary" slot="end" (click)="showPassword(inputPass)"></ion-icon>
+      <ion-icon [name]="showIconPass" color="dark" slot="end" (click)="showPassword(inputPass)"></ion-icon>
     </ion-item>
 
     <ion-item lines="full">
@@ -31,7 +31,7 @@
         <span *ngIf="confPass" class="required">&#42;</span>
       </ion-label>
       <ion-input #inputCPass type="password" [(ngModel)]="login.confPassword" name="confPassword"></ion-input>
-      <ion-icon [name]="showIconCPass" color="primary" slot="end" (click)="showPassword(inputCPass)"></ion-icon>
+      <ion-icon [name]="showIconCPass" color="dark" slot="end" (click)="showPassword(inputCPass)"></ion-icon>
     </ion-item>
 
     <ion-row>
