--- a/src/app/pages/share/share.page.scss
+++ b/src/app/pages/share/share.page.scss
@@ -22,4 +22,9 @@
 
 .content {
     background-color: rgb(222, 230, 222);
+    #userName {
+      text-align: center;
+      display: block;
+      padding: 10px;
+    }
 }
